--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ hi{
     color: darkblue;
 }
 
-img{
+main img{
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -24,11 +24,15 @@ p {
     padding: 0;
 }
 
+main {
+    max-width: 840px;
+}
+
 aside{
     width: 20em;
-    margin: 1em;
-    border: 1px solid rgba(0,0,0,0.2);
-    padding: 1em;
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 0.2);/*1*/
+    padding: 1rem;
     background-color: #eee;
     color: #333;
     text-align: center;
@@ -41,7 +45,7 @@ aside img{
 }
 
 footer{
-        margin-top: 1em;
+        margin-top: 15px;
         border-top: 1px solid #000;
         text-align: center;
     }
