--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,13 +13,14 @@ h1{
     color: darkblue;
 }
 
-main img{
+img{
     width: 150px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
-    box shadow: 0 0 30px gray;
-    }
+    box-shadow: 0 0 30px gray;
+}
+
 p {
     padding: 0;
 }
