--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,17 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-size: 16px;
+    font-family: Roboto, Arial, sans-serif;
+}
+
 nav{
     background-color: darkblue;
-    padding: 10px
+    padding: 10px;
 }
 
 nav a {
@@ -10,39 +21,45 @@ nav a {
 }
 
 h1{
-    color: darkblue;
+    color: steelblue;
+    padding: .5rem;
 }
 
-img{
+main{ 
+    max-width:640px;
+}
+
+main img{
     width: 150px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 
-p {
-    padding: 0;
-}
-
-main {
-    max-width: 840px;
+p{
+margin: 1rem;
 }
 
 aside{
-    width: 20em;
-    margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2);/*1*/
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
-    text-align: center;
+   width: 20em;
+   text-align: center;
+  position: relative;
 
 }
 
 aside img{
-    width: 200px;
+    width: 20em;
     height: auto;
+}
+
+aside h2{
+    position: absolute;
+    top: 47px;
+    left: 100px;
+    color: white
 }
 
 footer{
@@ -50,3 +67,16 @@ footer{
         border-top: 1px solid #000;
         text-align: center;
     }
+
+/*class selector*/
+.box{
+    margin: 1rem;
+    border: 1px solid rgba (0 0 0 / 10%);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+}
+
+.indent{
+padding-left: 2rem;
+}
