--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 :root {
 --primary-color: #055a05;
 --secondary-color: #f4a261;
@@ -13,6 +7,14 @@
 --body-font: Arial, Helvetica, sans-serif;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+
 body{
     font-family: var(--body-font);
     color: var(--accent1-color);
@@ -20,7 +22,7 @@ body{
 
 
 header, main, footer{
-    width:840px;
+    width: 840px;
     margin: 0 auto;
 }
 
@@ -60,7 +62,11 @@ h1{
     color: #fff;
 }
 
+
 .hero article img{
     float: right;
     width: 125px;
+    margin: 10px;
+    box-shadow: 1em;
 }
+
