--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -47,7 +47,7 @@ nav, p, section, article{
 article {
     position: absolute;
     top:  70px;
-    background-color: #f4a3615e
+    background-color: var(--secondary-color)
 }
 
 .hero img {
