--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,23 +1,40 @@
+nav {
+      background-color: steelblue;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+
 body{
     font-size: 16px;
     font-family: Roboto, Arial, sans-serif;
 }
 
-nav{
-    background-color: darkblue;
-    padding: 10px;
+body{
+    display: block;
 }
 
+
 nav a {
-    color: white;
     display: block;
-    padding: 20px;
+      padding: 0.5rem;
+      text-decoration: none;
+      font-size: 1.2rem;
+      font-weight: 700;
+      color: #fff;
+}
+
+header, .grid, footer{
+    max-width: 840px;
+    margin: 0 auto;
 }
 
 h1{
@@ -25,8 +42,14 @@ h1{
     padding: .5rem;
 }
 
+.grid{
+    display: grid;
+    align-items: center;
+}
+
 main{ 
-    max-width:640px;
+    grid-column: 2/3;
+    margin: 1rem;
 }
 
 main img{
@@ -45,8 +68,9 @@ margin: 1rem;
 
 aside{
    width: 20em;
-   text-align: center;
   position: relative;
+  grid-column: 1/2;
+  grid-row: 1/2;
 
 }
 
@@ -69,6 +93,7 @@ footer{
     }
 
 /*class selector*/
+
 .box{
     margin: 1rem;
     border: 1px solid rgba (0 0 0 / 10%);
