--- a/week04/styles/layout-exercises.css
+++ b/week04/styles/layout-exercises.css
@@ -24,18 +24,24 @@ div {
 .flex {
     background-color: #aba;
     /* write declarations here */
+    display: flex;
+    justify-content: center;
+    align-content: center;
 
 }
 
 .grid {
     background-color: #abb;
     /* enter declarations here */
-
+    display: grid;
+    place-items: center;
 }
 
 .container2 {
     /* write declarations here */
-
+    display: flex;
+    justify-content: space-around;
+    flex-flow: row wrap;
 }
 
 .two {
@@ -45,12 +51,14 @@ div {
 
 .container3 {
     /* write declarations here */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 
 }
 
 .columns-3 {
     /* write declaration here */
-
+grid-column: span 3;
 }
 
 .three {
