--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -13,6 +13,33 @@
     box-sizing: border-box;
 }
 
+nav ul {
+    padding: 1rem;
+    display: grid;
+   grid-template-columns: 200px 200px 200px 200px;
+}
+
+
+nav a {
+    display: block;
+    color: navy;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    border: 1px solid black;
+}
+
+
+
+header {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    max-width: 1000px;
+}
+    
 
 
 body{
@@ -46,9 +73,10 @@ nav, p, section, article{
 
 article {
     position: absolute;
-    top:  70px;
-    background-color: var(--secondary-color)
+    top:  250px;
+    background-color:var(--secondary-color);
 }
+
 
 .hero img {
     display: block;
@@ -58,7 +86,7 @@ article {
 
 h1{
     position: absolute;
-    top: 20px;
+    top: 200px;
     width: 100%;
     padding: 16px;
     text-align: center;
@@ -71,4 +99,19 @@ h1{
     float: right;
     width: 125px;
 }
+figure{
+   display: flex;
+   flex-direction: row;
+}
 
+
+
+footer{
+    display: flex;
+    flex-direction: row;
+}
+
+.socialmedia{
+    display: flex;
+    gap: 10px;
+}
