--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -15,20 +15,20 @@
 
 nav ul {
     padding: 1rem;
-    display: grid;
-   grid-template-columns: 200px 200px 200px 200px;
+    display: flex;
+    width: 600px;
 }
 
 
 nav a {
     display: block;
     color: navy;
-    padding: 0.5rem;
+    padding: 1.0rem;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 700;
     border: 1px solid black;
-}
+    }
 
 
 
