--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -14,9 +14,12 @@
 }
 
 nav ul {
-    padding: 1rem;
+    /* padding: 1rem; */
     display: flex;
-    width: 700px;
+    /* width: 700px; */
+    padding-inline-start: 0px;
+    margin-block-start: 0px;
+    list-style-type: none;
 }
 
 
