--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -14,12 +14,12 @@
 }
 
 nav ul {
-    /* padding: 1rem; */
+    padding: 1rem;
     display: flex;
-    /* width: 700px; */
-    padding-inline-start: 0px;
-    margin-block-start: 0px;
+    padding-inline-start: 10px;
+    margin-block-start: 10px;
     list-style-type: none;
+    margin-left: 20px;
 }
 
 
@@ -62,7 +62,7 @@ h1,h2{
     color: var(--primary-color);
 }
 
-nav, p, section, article{
+p, section, article{
     margin: 16px;
     padding: 8px;
 }
@@ -77,7 +77,7 @@ nav, p, section, article{
 
 article {
     position: absolute;
-    top:  250px;
+    top:  252px;
     background-color:var(--secondary-color);
 }
 
@@ -98,6 +98,18 @@ h1{
     color: #fff;
 }
 
+h2{
+    text-align: center;
+    font-size: 2rem;
+}
+
+h3{
+    text-align: center;
+    font-family: var(--heading-font);
+    color: var(--primary-color);
+    font-size: 2rem;
+}
+
 .hero article img {
     float: right;
     width: 125px;
@@ -106,6 +118,18 @@ h1{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
+}
+
+.history{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.history img{
+    display: block;
+    width: 500px;
 }
 
 figure img{
