--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -54,7 +54,7 @@ body{
 }
 
 
-header, main, footer{
+header, main, footer, form, .map{
     width: 100%;
     margin: 0 auto;
 }
@@ -78,7 +78,7 @@ h1,h2{
 
 .box{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
     grid-gap: 40px;
     width: 100%;
     
@@ -90,7 +90,7 @@ h1,h2{
 }
 
 form{
-    width: 500px;
+    width: 600px;
     margin-right: 15px;
     padding: 1rem;
     border-radius: 0.5rem;
@@ -115,7 +115,7 @@ label{
 
 input{
     padding: .75rem;
-    width: 320px;
+    width: 450px;
 }
 
 input,select,textarea{
@@ -124,7 +124,7 @@ input,select,textarea{
 }
 
 input[type="checkbox"]{
-    width: 22px;
+    width: 50px;
     height: 22px;
     vertical-align: bottom;
 }
@@ -133,23 +133,22 @@ input[type="radio"]{
     width: 15px;
     height: 15px;
     position:relative;
-    
-    
-    
+         
 }
 
-.column2{
-    padding: 20px;
-    float: right;
+
+
+.column2 {
+    float:right;
 }
 
 .column3{
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 legend{
     display: inline-block;
-    margin-top: 50px;
+   
 }
 
 h2{
@@ -170,8 +169,9 @@ fieldset{
 }
 
 textarea{
-    width: 450px;
-    margin: 0.5rem;
+    width: 550px;
+    margin-top: 0.5rem;
+    margin-bottom: 10px;
 
 }
 
@@ -179,6 +179,11 @@ textarea{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
+}
+
+.staff{
+    border: black;
+    border-style:double;
 }
 
 figure img{
@@ -193,7 +198,7 @@ figure caption{
 }
 
 button{
-    margin: 1rem;
+    margin: 50px;
     background-color: navy;
     color: #fff;
     border: none;
