--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -264,7 +264,88 @@ button:hover{
     background-color: darkgreen;
 }
 
+.offers{
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-template-rows: 200px 200px 200px;
+    width: 100;
+    height: 650px;
+    gap:0px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(96 139 168 / 0.2);
+    padding: 20px;
+    text-align: center;
+    
+}
+
+.offers img{
+    width: 200px;
+    height:200px;
+}
+
+.offer1{
+    grid-column:1;
+    grid-row: 1;
+}
+
+.offer2{
+    grid-column:3;
+    grid-row: 1;
+}
+
+.offer3{
+    grid-column:2;
+    grid-row:2;
+}
+
+.offer4{
+    grid-column:1;
+    grid-row:3;
+}
+
+.offer5{
+    grid-column: 3;
+    grid-row: 3;
+}
+
+.join{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    border: 2px dotted rgb(96 139 168);
+}
+
+.join > * {
+  border: 2px solid rgb(96 139 168);
+  border-radius: 5px;
+  background-color: rgb(96 139 168 / 0.2);
+  padding: 1em;
+}
+
+.join1{order:2;}
+.join2{order:1;}
+.join3{order:3;}
+p2{
+    font-display: block;
+    font-size: 18px;
+    font-style: oblique;
+}
+
+p1{
+    font-size: 20px;
+    font-family:cursive;
+    
+}
+
+.visit {
+    display: center;
+    margin-top: 50px;
+}
+
+
 footer{
+    margin-top: 55px;
     display: flex;
     flex-direction: row;
 }
