--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -115,6 +115,10 @@ p, section, article{
     width: 500px;
 }
 
+p{
+    font-size: larger;
+    text-align: justify;
+}
 
 .grid-container{
     display: grid;
@@ -268,7 +272,7 @@ button:hover{
     display: grid;
     grid-template-columns: 200px 200px 200px;
     grid-template-rows: 200px 200px 200px;
-    width: 100;
+    width: 100%;
     height: 650px;
     gap:0px;
     align-items: center;
@@ -326,8 +330,8 @@ button:hover{
 .join1{order:2;}
 .join2{order:1;}
 .join3{order:3;}
+
 p2{
-    font-display: block;
     font-size: 18px;
     font-style: oblique;
 }
@@ -339,7 +343,6 @@ p1{
 }
 
 .visit {
-    display: center;
     margin-top: 50px;
 }
 
