--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -469,13 +469,23 @@ tbody>tr:nth-of-type(even) {
     margin-top: 15px;
 }
 
-.contact button{
-    padding: 10px 20px;
-    background-color: #0077cc;
+
+
+.cta-button{
+    background-color: navy;
     color: white;
+    padding: 10px 20px;
+    font-size: 18px;
     border: none;
-    cursor: pointer;
     border-radius: 4px;
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 15px;
+    }
+
+.cta-button:hover{
+    background-color: #218838;
+
 }
 
 footer{
